--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,11 @@
     <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
-    <link rel="stylesheet" href="debug.css">
+    <!-- <link rel="stylesheet" href="debug.css"> -->
     <title>Anamata</title>
 </head>
 <body>
-    <div id="app" class="hero">
+    <div id="app">
     </div>
 </body>
     <script src='./bundle.js'></script>
